Started adding payment stuff

--- a/app/components/dashboard/views/find/findRide.html
+++ b/app/components/dashboard/views/find/findRide.html
@@ -71,7 +71,7 @@
                       </div>
                     </div>
                     <div layout="column" flex="50">
-                      <md-button class="md-accent md-raised" >
+                      <md-button class="md-accent md-raised" ng-click="showPayment($event, ride, $index)">
                         Buy Seat
                       </md-button>
                     </div>
