removed init function

--- a/app/components/dashboard/views/reviewFormTmpl.html
+++ b/app/components/dashboard/views/reviewFormTmpl.html
@@ -1,4 +1,4 @@
-<md-dialog aria-label="test" data-ng-init="initReviewInfo()">
+<md-dialog aria-label="test">
   <form name="reviewForm">
     <md-dialog-content>
         <md-toolbar md-scroll-y class="md-whiteframe-z4" layout="row">
