--- a/app/components/dashboard/views/begin.html
+++ b/app/components/dashboard/views/begin.html
@@ -15,15 +15,15 @@
 
     <div layout="column" flex="25" layout-align="top">
       <md-list style="y-overflow: auto;">
-        <md-subheader style="background-color: #424242; color: white;">Your Rides</md-subheader>
+        <md-subheader style="background-color: #424242; color: white;">YOUR RIDES</md-subheader>
         <md-list-item class="md-2-line" ng-repeat="trip in tripData">
           <div layout="row">
             <img ng-src="{{trip.img_url}}" class="md-avatar" />
             <div layout="column">
-              <h5 style="margin:2px;">Driver: {{trip.name}}</h4>
-              <h6 style="margin:2px;">Departing: {{trip.start_time}}</h4>
-              <h6 style="margin:2px;">From: {{trip.from}}</h4>
-              <h6 style="margin:2px;">To: {{trip.to}}</h4>
+              <h5 style="margin:2px;">Driver: {{trip.name}}</h5>
+              <h6 style="margin:2px;">Departing: {{trip.start_time}}</h6>
+              <h6 style="margin:2px;">From: {{trip.from}}</h6>
+              <h6 style="margin:2px;">To: {{trip.to}}</h6>
               <md-button ng-click="showReviewForm($event, trip.user)" class="md-accent md-raised">Review</md-button>
             </div>
           </div>
