--- a/app/components/dashboard/views/reviewFormTmpl.html
+++ b/app/components/dashboard/views/reviewFormTmpl.html
@@ -8,11 +8,14 @@
 
         <div layout="column" style="height:450px;">
             <section layout="column" flex>
-                <md-input-container>
+                <div layout="row">
                     <img ng-src="{{initReview.img_url}}" class="md-avatar" />
-                    <h5 style="margin:2px;">Driver: {{initReview.name}}</h4>
-
-                    </md-input-container>
+                    <div layout="column">
+                        <p style="margin:20px;">DRIVER: {{initReview.name}}</p>
+                    </div>
+                </div>
+              
+                    
                 <md-select placeholder="DRIVER ABILITY" aria-label="driver_abilities" ng-model="review.driver">
                     <md-option ng-repeat="option in reviewOptions" value="{{option}}">{{option}}</md-option>
                 </md-select>
@@ -27,7 +30,7 @@
                 </md-select>
                 <md-input-container>
                     <label>Comments</label>
-                    <textarea ng-model="comment"></textarea>
+                    <textarea ng-model="comment" md-maxlength="250"></textarea>
                 </md-input-container> 
             <md-button class="md-accent" ng-click="saveReview()">SAVE</md-button>
       
