--- a/app/components/dashboard/views/reviewFormTmpl.html
+++ b/app/components/dashboard/views/reviewFormTmpl.html
@@ -30,7 +30,7 @@
                 </md-select>
                 <md-input-container>
                     <label>Comments</label>
-                    <textarea ng-model="comment" md-maxlength="250"></textarea>
+                    <textarea ng-model="comment" md-maxlength="250" maxlength="250"></textarea>
                 </md-input-container> 
             <md-button class="md-accent" ng-click="saveReview()">SAVE</md-button>
       
