--- a/app/components/dashboard/views/begin.html
+++ b/app/components/dashboard/views/begin.html
@@ -15,7 +15,7 @@
 
     <div layout="column" flex="25" layout-align="top">
       <md-list style="y-overflow: auto;">
-        <md-subheader style="background-color: #424242; color: white;">YOUR RIDES</md-subheader>
+        <md-subheader style="background-color: #424242; color: white; margin-right: 0px;">YOUR RIDES</md-subheader>
         <md-list-item class="md-2-line" ng-repeat="trip in tripData">
           <div layout="row">
             <img ng-src="{{trip.img_url}}" class="md-avatar" />
