--- a/app/components/dashboard/views/post/postRideInfo.html
+++ b/app/components/dashboard/views/post/postRideInfo.html
@@ -14,11 +14,14 @@
                       <input type="text" ng-model="starting.city">
                     </md-input-container>
                     <md-input-container id="find-ride-form">
-                      <!--<label>Starting State</label>-->
-                      <md-select aria-label="state" ng-model="starting.state">
+                      <md-select aria-label="state" ng-model="starting.state" placeholder="Starting State">
                         <md-option ng-repeat="state in states" value="{{state.abbrev}}">{{state.abbrev}}</md-option>
 
                     </md-select>
+                    </md-input-container>
+                    <md-input-container id="find-ride-form">
+                      <label>MPG</label>
+                      <input type="text" ng-model="car.mpg">
                     </md-input-container>
                 </div>
 
@@ -28,23 +31,45 @@
                     <input type="text" ng-model="ending.city">
                   </md-input-container>
                   <md-input-container id="find-ride-form">
-                    <!--<label>State</label>-->
-                    <md-select aria-label="state" ng-model="ending.state">
+                    <md-select aria-label="state" ng-model="ending.state" placeholder="Ending State">
                       <md-option ng-repeat="state in states" value="{{state.abbrev}}">{{state.abbrev}}</md-option>
 
                     </md-select>
                   </md-input-container>
+                  <md-input-container id="find-ride-form">
+                    <md-select aria-label="seats" ng-model="car.seats" placeholder="Seats">
+                      <md-option value="1">1</md-option>
+                      <md-option value="2">2</md-option>
+                      <md-option value="3">3</md-option>
+                      <md-option value="4">4</md-option>
+                      <md-option value="5">5</md-option>
+                      <md-option value="6">6</md-option>
+                      <md-option value="7">7</md-option>
+                      <md-option value="8">8</md-option>
+                      <md-option value="9">9</md-option>
+                      <md-option value="10">10</md-option>
+                      <md-option value="11">11</md-option>
+                      <md-option value="12">12</md-option>
+                      <md-option value="13">13</md-option>
+                      <md-option value="14">14</md-option>
+                      <md-option value="15">15</md-option>
+                    </md-select>
+                  </md-input-container>
                 </div>
 
-                <div layout-gt-sm="column" layout="row" flex-gt-sm="33" layout-align="center center">
+                <div layout-gt-sm="column" layout="row" flex-gt-sm="33" layout-align="center">
                   <md-input-container id="find-ride-form" style="max-height: 171px;">
                     <label>Date: </label>
                     <input type="date" ng-model="departureDate">
                   </md-input-container>
+                  <md-input-container id="find-ride-form" style="max-height: 171px;">
+                    <label>Time: </label>
+                    <input type="time" ng-model="departureTime">
+                  </md-input-container>
                 </div>
             </div>
               <div layout="row" layout-align="center center">
-                <md-button type="submit" class="md-accent md-raised" ng-click="findRides()">Search</md-button>
+                <md-button type="submit" class="md-accent md-raised" ng-click="setPrice()">Set Price</md-button>
               </div>
             </form>
           </md-card-content>
@@ -76,7 +101,12 @@
             </md-list-item>
             <md-list-item class="md-2-line" ng-show="!rides.length">
               <div layout="row" layout-align="left" flex="100">
-                <p>There are no rides between those two specified cities.</p>
+                <p id="error1" style="color:#d9534f"></p>
+                <p id="error2" style="color:#d9534f"></p>
+                <p id="error3" style="color:#d9534f"></p>
+                <p id="error4" style="color:#d9534f"></p>
+                <p id="error5" style="color:#d9534f"></p>
+                <p id="error6" style="color:#d9534f"></p>
               </div>
             </md-list-item>
           </md-list>
@@ -84,7 +114,7 @@
 
       </div>
     <div hide show-gt-md layout="column" flex="40" layout-align="top">
-      <div id="map" flex="100"></div>
+      <div id="map" flex="100" data-ng-init="printUSA()"></div>
     </div>
   </div>
 </md-content>
