--- a/app/components/dashboard/views/begin.html
+++ b/app/components/dashboard/views/begin.html
@@ -6,7 +6,7 @@
         <div class="dashboard-button" ui-sref="^.find">
               <h3>FIND A RIDE</h3>
         </div>
-        <div class="dashboard-button md-accent" ui-sref="^.find">
+        <div class="dashboard-button md-accent" ui-sref="^.post.info">
             <h3>POST A RIDE</h3>
         </div>
       </div>
