--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -210,6 +210,10 @@ h5 {
     font-weight: normal;
 }
 
+#hitch_home {
+    font-weight: normal;
+}
+
 #profileDisplayName {
     text-transform: uppercase;
 }
