--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -19,12 +19,12 @@ div{
 }
 
 .md-avatar{
-  border-radius: 30px;
+  border-radius: 2px;
   border: 1px solid #ddd;
   display: inline-block;
   margin: 4px 16px;
-  width: 48px;
-  height: 48px;
+  width: 54px;
+  height: 54px;
 }
 
 #map {
@@ -112,12 +112,12 @@ md-icon.md-default-theme{
 .dashboard-button{
   width: 200px;
   height: 175px;
-  margin: 0px 25px 25px 25px;
-  border-radius: 5px;
+  margin: 0px 15px 25px 15px;
+  border-radius: 2px;
   box-shadow: -3px 2px 1px 0px
   rgba(0,0,0,.2),0 2px 2px 0 rgba(0,0,0,.14),0 1px 5px 0 rgba(0,0,0,.12);
   text-align:center;
-  background-color: rgb(1,87,155);
+  background-color: rgba(1,87,155,.9);
   color: white;
   cursor: pointer;
 }
@@ -186,6 +186,7 @@ md-icon.md-default-theme{
     top: 6;
     height: 50px;
     width: 50px;
+    border-radius: 4px;
 }
 
 #profileAvatar {
@@ -219,7 +220,7 @@ h5 {
 }
 
 #ride_queue_header {
-    background-color: #070835;
+    background-color: rgb(66,66,66);
 }
 
 md-list.md-default-theme {
@@ -230,3 +231,17 @@ md-list-item .md-no-style, md-list-item.md-no-proxy {
     padding: 6px 16px;   
 }
 
+.section.dashboard_home {
+    background: url("../img/blurryLightsCarO75.jpg") no-repeat center center fixed;
+    background-size: 100% auto;
+    background-position: left;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+md-sidenav {
+    background-color: rgba(236,236,236,.85);
+}
+
+md-toolbar {
+    background-color: yellow;
+}
