--- a/app/components/dashboard/views/find/findRide.html
+++ b/app/components/dashboard/views/find/findRide.html
@@ -2,7 +2,7 @@
   <div class="section" id="dashboard-start" layout="column" layout-align="center top">
 
     <div layout="row" layout-align="center">
-      <div layout="column" layout-align="top">
+      <div layout="column" layout-align="top" flex="55">
         <div layout="row">
         <md-card flex="100">
           <md-card-content id="find-ride-form">
@@ -92,7 +92,7 @@
         </div>
 
       </div>
-    <div hide show-gt-md layout="column" flex="40" layout-align="top">
+    <div hide show-gt-md layout="column" flex="45" layout-align="top">
       <div id="map" flex="100" data-ng-init="printUSA()"></div>
     </div>
   </div>
