Made stuff more mobile and whatnot :D

--- a/app/components/dashboard/views/find/findRide.html
+++ b/app/components/dashboard/views/find/findRide.html
@@ -2,7 +2,7 @@
   <div class="section" id="dashboard-start" layout="column" layout-align="center top">
 
     <div layout="row" layout-align="center">
-      <div layout="column" layout-align="top">
+      <div layout="column" layout-align="top" flex-gt-md="60" flex="100">
         <div layout="row">
         <md-card flex="100">
           <md-card-content id="find-ride-form">
@@ -35,7 +35,7 @@
                   </md-input-container>
                 </div>
 
-                <div layout-gt-sm="column" layout="row" flex-gt-sm="33" layout-align="center center">
+                <div layout-gt-sm="column" layout="row" flex-gt-sm="33" layout-align="center">
                   <md-input-container id="find-ride-form" style="max-height: 171px;">
                     <label>Date: </label>
                     <input type="date" ng-model="departureDate">
