reviews on profile

--- a/app/components/profile/views/profileFormTmpl.html
+++ b/app/components/profile/views/profileFormTmpl.html
@@ -13,8 +13,29 @@
                     <md-tab id="tab1">
                         <md-tab-label>REVIEWS</md-tab-label>
                         <md-tab-body>
-                          View for Item #1 <br/>
-                          data.selectedIndex = 0;
+                        
+                            <div layout="row" flex>
+                                <div layout="column" flex="15">
+                                    <img ng-src="" class="md-avatar" />
+                                    <h4 style="margin:2px;">NAME</h4>
+                                </div>    
+                                <div layout="column" flex="85">
+                                    <h5 style="margin:2px;">DRIVER ABILITY</h5>
+                                    <h5 style="margin:2px;">COMFORT</h5>
+                                    <h5 style="margin:2px;">PRICE FAIRNESS</h5>
+                                    <h5 style="margin:2px;">OVERALL</h5>
+                                    <md-input-container>
+                                        <textarea disabled></textarea>
+                                    </md-input-container>
+                                </div>
+                            </div>
+                        
+                        
+                        
+                        
+                        
+                        
+                        
                         </md-tab-body>
                     </md-tab>
                     <md-tab id="tab2">
