--- a/app/components/profile/views/profileFormTmpl.html
+++ b/app/components/profile/views/profileFormTmpl.html
@@ -29,20 +29,21 @@
                                     </md-input-container>
                                 </div>
                             </div>
-                        
-                        
-                        
-                        
-                        
-                        
-                        
                         </md-tab-body>
                     </md-tab>
                     <md-tab id="tab2">
                         <md-tab-label>RIDES</md-tab-label>
                         <md-tab-body>
-                          View for Item #2 <br/>
-                          data.selectedIndex = 1;
+                          
+                            <div layout="row">
+                                <div layout="column">
+                                    <h4 style="margin:2px;">DESCRIPTION </h4>
+                                    <h5 style="margin:2px;">DEPARTING </h5>
+                                    <h5 style="margin:2px;">FROM </h5>
+                                    <h5 style="margin:2px;">TO </h5>
+                                </div>
+                            </div>
+                            
                         </md-tab-body>
                     </md-tab>
                     <md-tab id="tab3">
