fix form on homepage

--- a/app/components/home/views/homeView.html
+++ b/app/components/home/views/homeView.html
@@ -4,10 +4,7 @@
      
       <h1 id="hitch_home" layout-align-gt-sm="left" class="md-toolbar-tools">HITCH</h1>
       
-      <!--        <img src="/assets/img/hitch_small_logo.png" height="100px" width="200px" style="object-fit: contain;">-->
-    <form name="loginForm" ng-controller="LoginCtrl">   
-      <md-button ng-click="loginWithFacebook()">LOGIN</md-button>
-   </form>
+      <md-button ng-controller="LoginCtrl" ng-click="loginWithFacebook()">LOGIN</md-button>
   </md-toolbar>
   <div id="outer-wrapper"> 
       <md-content layout="column" layout-align="center center" flex class="md-padding" id="home-content">
