picture and name for reviews

--- a/app/components/profile/views/profileFormTmpl.html
+++ b/app/components/profile/views/profileFormTmpl.html
@@ -13,29 +13,34 @@
                     <md-tab id="tab1">
                         <md-tab-label>REVIEWS</md-tab-label>
                         <md-tab-body>
-                        
-                            <div layout="row" flex>
-                                <div layout="column" flex="15">
-                                    <img ng-src="" class="md-avatar" />
-                                    <h4 style="margin:2px;">NAME</h4>
-                                </div>    
-                                <div layout="column" flex="85">
-                                    <h5 style="margin:2px;">DRIVER ABILITY</h5>
-                                    <h5 style="margin:2px;">COMFORT</h5>
-                                    <h5 style="margin:2px;">PRICE FAIRNESS</h5>
-                                    <h5 style="margin:2px;">OVERALL</h5>
-                                    <md-input-container>
-                                        <textarea disabled></textarea>
-                                    </md-input-container>
-                                </div>
-                            </div>
-                        
-                        
-                        
-                        
-                        
-                        
-                        
+
+                            <md-list>
+                                <md-list-item ng-repeat="review in profileReviews">
+                                    <div layout="row" flex>
+                                        <div layout="column" flex="15">
+                                            <img ng-src="{{review.img_url}}" class="md-avatar" />
+                                            <h4 style="margin:2px;">{{review.name}}</h4>
+                                        </div>
+                                        <div layout="column" flex="85">
+                                            <h5 style="margin:2px;">DRIVER ABILITY {{review.driver_ability}}</h5>
+                                            <h5 style="margin:2px;">COMFORT {{review.comfort}}</h5>
+                                            <h5 style="margin:2px;">PRICE FAIRNESS {{review.price_fairness}}</h5>
+                                            <h5 style="margin:2px;">OVERALL {{review.overall}}</h5>
+                                            <md-input-container>
+                                                <textarea disabled ng-model="review.comment"></textarea>
+                                            </md-input-container>
+                                        </div>
+                                    </div>
+                                </md-list-item>
+                            </md-list>
+
+
+
+
+
+
+
+
                         </md-tab-body>
                     </md-tab>
                     <md-tab id="tab2">
