--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -239,6 +239,13 @@ md-list-item .md-no-style, md-list-item.md-no-proxy {
     background-repeat: no-repeat;
 }
 
+.section.find_a_ride {
+    background: url("../img/grid.jpg") repeat center center fixed;
+    background-size: 100% auto;
+    background-position: left;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
 
 md-sidenav {
     background-color: rgba(236,236,236,.85);
