--- a/app/components/dashboard/views/find/findRide.html
+++ b/app/components/dashboard/views/find/findRide.html
@@ -38,7 +38,7 @@
                 <div layout-gt-sm="column" layout="row" flex-gt-sm="33" layout-align="center center">
                   <md-input-container id="find-ride-form" style="max-height: 171px;">
                     <label>Date: </label>
-                    <input type="date" ng-model="departureDate">
+                    <input type="date" ng-model="search.date">
                   </md-input-container>
                 </div>
             </div>
@@ -53,7 +53,7 @@
         <div layout="row" id = "ride-list-container">
           <md-list>
             <!--<md-subheader>Rides! :D</md-subheader>-->
-            <md-list-item class="md-2-line" ng-repeat="ride in rides">
+            <md-list-item class="md-2-line" ng-repeat="ride in rides" ng-cloak>
               <div layout="row" layout-align="right" flex="100">
                 <div class="md-list-item-text" layout="column" flex="40">
                   <h3 class="list-text">{{ride.name}}</h3>
@@ -79,15 +79,14 @@
               </div>
               <md-divider ></md-divider>
             </md-list-item>
-            <md-list-item class="md-2-line" ng-show="!rides.length">
-              <div layout="row" layout-align="left" flex="100">
-                <p>There are no rides between those specified cities.</p>
+              <div layout="row" layout-align="left" ng-show="!rides.length" flex="100" >
+                <p id="search" style="color:#d9534f"></p>
                 <p id="error1" style="color:#d9534f"></p>
                 <p id="error2" style="color:#d9534f"></p>
                 <p id="error3" style="color:#d9534f"></p>
                 <p id="error4" style="color:#d9534f"></p>
+                <p id="error5" style="color:#d9534f"></p>
               </div>
-            </md-list-item>
           </md-list>
         </div>
 
