--- a/app/components/dashboard/views/dashboard.html
+++ b/app/components/dashboard/views/dashboard.html
@@ -13,7 +13,7 @@
       </div>
 
       <div layout="row" layout-align="end" hide-gt-sm flex>
-        <img class="profilePicture" src="{{getUserData().facebook.profileImageURL}}" ng-click="showProfile($event)" style="cursor: pointer;">
+        <img class="profilePicture" src="{{getUserData().facebook.profileImageURL}}" ng-click="showProfile($event, getUserData().facebook.id)" style="cursor: pointer;">
         </img>
 
         <md-button ng-click="logout()">LOGOUT</md-button>
