add a vehicle UI for profile and dialog box

--- a/app/components/dashboard/views/post/postRideInfo.html
+++ b/app/components/dashboard/views/post/postRideInfo.html
@@ -1,5 +1,5 @@
 <md-content layout="row" flex class="md-padding" id="home-content">
-  <div class="section" id="dashboard-start" layout="column" layout-align="center top">
+  <div class="section find_a_ride" id="dashboard-start" layout="column" layout-align="center top">
 
     <div layout="row" layout-align="center">
       <div layout="column" layout-align="top" flex="55" style="overflow-y: auto;">
