--- a/app/components/dashboard/views/reviewFormTmpl.html
+++ b/app/components/dashboard/views/reviewFormTmpl.html
@@ -2,9 +2,9 @@
   <form name="reviewForm">
     <md-dialog-content>
         <md-toolbar md-scroll-y class="md-whiteframe-z4" layout="row">
-            <h1 id="profileDisplayName" layout-align="left" class="md-toolbar-tools">REVIEW YOUR RIDE</h1>
+            <h1 id="profileDisplayName" layout-align="left" class="md-toolbar-tools">REVIEW A RIDE</h1>
         </md-toolbar>
-        <div id="review_dialog">
+        <div class="template_dialog">
 
         <div layout="column" style="height:450px;">
             <section layout="column" flex>
