--- a/app/components/dashboard/views/post/postRideInfo.html
+++ b/app/components/dashboard/views/post/postRideInfo.html
@@ -82,30 +82,6 @@
 
         <div id="ride-list-container">
           <md-list>
-            <!--<md-subheader>Rides! :D</md-subheader>-->
-            <md-list-item class="md-2-line" ng-repeat="ride in rides">
-              <div layout="row" layout-align="left" flex="100">
-                <div class="md-list-item-text" layout="column" flex="40">
-                  <h3 class="list-text">{{ride.name}}</h3>
-                  <h4 class="list-text">{{ride.comment}}</h4>
-                </div>
-                <div class="md-list-item-text" layout="column" flex="40">
-                  <h3>Seats: {{ride.seats_left}}</h3>
-                </div>
-                <div layout="column" layout-align="center center">
-                  <div layout="row">
-                    <h4>${{ride.seat_price}}</h4>
-                    <md-button class="md-accent md-raised">
-                      Buy Seat
-                    </md-button>
-                  </div>
-                </div>
-              </div>
-
-              <md-divider ></md-divider>
-
-            </md-list-item>
-
                 <p id="error1" style="color:#d9534f"></p>
                 <p id="error2" style="color:#d9534f"></p>
                 <p id="error3" style="color:#d9534f"></p>
@@ -114,10 +90,25 @@
                 <p id="error6" style="color:#d9534f"></p>
                 <p id="error7" style="color:#d9534f"></p>
                 <p id="error8" style="color:#d9534f"></p>
-                <p id="distance"></p>
-                <p id="totalCost"></p>
-                <p id="seatCost"></p>
 
+                <!--<h3 id="distance"></h3>
+                <h3 id="totalCost"></h3>
+                <h3 id="seatCost"></h3>-->
+                <md-form ng-show="postRidePricing.showForm">
+
+                    <h3>Trip distance is {{postRidePricing.distance}} miles</h3>
+
+                    <h3>Total trip cost is ${{postRidePricing.totalCost}}</h3>
+
+                  <md-input-container>
+                    <label>Price per seat</label>
+                    <input type="text" ng-model="postRidePricing.price">
+                  </md-input-container>
+
+                  <md-button class="md-accent md-raised" ng-click="postRide()">
+                    Post Ride
+                  </md-button>
+                </md-form>
           </md-list>
         </div>
 
