fix style on home

--- a/app/components/profile/views/profileFormTmpl.html
+++ b/app/components/profile/views/profileFormTmpl.html
@@ -14,11 +14,8 @@
                         <md-tab-label>REVIEWS</md-tab-label>
                         <md-tab-body>
                             <div layout="row" style="padding:10px 0px;">
-                                <div layout="column" flex="15">
-                                    <h5 style="margin:2px; font-weight: normal;">{{viewedProfileInfo.name}}</h5>
-                                </div>
-                                <div layout="column" flex="85">
-                                    <h4 style="margin:0px;"><b>OVERALL RATING</b></h4>
+                                <div layout="column" flex="100">
+                                    <h4 style="margin:0px;"><b>COMPREHENSIVE RATING</b></h4>
                                     <h5 style="margin:1px;"><b>DRIVER ABILITY</b> {{review.driver_ability}}</h5>
                                     <h5 style="margin:1px;"><b>COMFORT</b> {{review.comfort}}</h5>
                                     <h5 style="margin:1px;"><b>PRICE FAIRNESS</b> {{review.price_fairness}}</h5>
