--- a/app/components/home/views/homeView.html
+++ b/app/components/home/views/homeView.html
@@ -9,14 +9,20 @@
   <div id="outer-wrapper"> 
       <md-content layout="column" layout-align="center center" flex class="md-padding" id="home-content">
 
-        <div class="section" id="home-section" hide-gt-sm layout="row" layout-align="center center">
-          <div layout="column" flex="60" hide-gt-sm layout-align="center">
+        <div class="section" id="home-section" hide-gt-sm layout="column" layout-align="center center">
+          <div layout="column" flex="60" hide-gt-sm layout="row" layout-align="center">
             <img src="/assets/img/hitch_car_logo.png" height="200px" width="400px" style="object-fit: contain;">
           </div>
+            <div class="section" id="caption_section" layout="row" layout-align="center center">
+                <p>For People Who Go Places</p>  
+            </div>
         </div>
 
         <div class="section" id="home-section" hide-sm layout="row" layout-align="center center">
               <img src="/assets/img/hitch_car_logo.png" height="400px" width="1000px" style="object-fit: contain;">
+        </div>
+        <div class="section" id="caption_section" layout="row" layout-align="center center">
+            <p>For People Who Go Places</p>  
         </div>
       </md-content>
   </div>
