--- a/app/components/dashboard/views/begin.html
+++ b/app/components/dashboard/views/begin.html
@@ -12,10 +12,10 @@
               <div layout="row">
                 <img ng-click="showProfile($event, trip.user)" ng-src="{{trip.img_url}}" class="md-avatar" />
                 <div layout="column">
-                  <h4 style="margin:2px;">Driver: {{trip.name}}</h4>
-                  <h5 style="margin:2px;">Departing: {{trip.start_time}}</h5>
-                  <h5 style="margin:2px;">From: {{trip.from}}</h5>
-                  <h5 style="margin:2px;">To: {{trip.to}}</h5>
+                  <h4 style="margin:2px;">DRIVER: {{trip.name}}</h4>
+                  <h5 style="margin:2px;">DEPARTING: {{trip.start_time}}</h5>
+                  <h5 style="margin:2px;">FROM: {{trip.from}}</h5>
+                  <h5 style="margin:2px;">TO: {{trip.to}}</h5>
                   <md-button ng-click="showReviewForm($event, trip.user, trip.passenger_trip_id)" ng-hide="trip.is_reviewed || trip.time_num > now" class="md-accent md-raised">Review</md-button>
                 </div>
               </div>
