styling and error checking of vehicles

--- a/app/components/dashboard/views/addVehicle/addVehicleTmpl.html
+++ b/app/components/dashboard/views/addVehicle/addVehicleTmpl.html
@@ -19,7 +19,7 @@
                         </md-input-container>
                         <md-input-container>
                             <label>YEAR</label>
-                            <input type="text" ng-model="newVehicle.year" />
+                            <input type="number" maxlength="4" minlength="4" ng-model="newVehicle.year" />
                         </md-input-container>
                         <md-input-container>
                             <label>COLOR</label>
