--- a/app/components/dashboard/views/begin.html
+++ b/app/components/dashboard/views/begin.html
@@ -27,17 +27,16 @@
     
     <div layout="column" id="dashboard_background" flex="80" layout-align="center center" >
       <div id="dashboard-home-grid" layout="row">
-        <div ng-click="showVehicleForm($event)" class="dashboard-button">
-          <h3>ADD A VEHICLE</h3>
-        </div>
-        <div class="dashboard-button" ui-sref="^.find">
+            <div ng-click="showVehicleForm($event)" id="dashboard_button_1" class="dashboard-button">
+                <h3>ADD A VEHICLE</h3>
+            </div>
+            <div class="dashboard-button" id="dashboard_button_2" ui-sref="^.find">
               <h3>FIND A RIDE</h3>
+            </div>
+            <div class="dashboard-button" id="dashboard_button_3" ui-sref="^.post.info">
+                <h3>POST A RIDE</h3>
+            </div>
         </div>
-        <div class="dashboard-button md-accent" ui-sref="^.post.info">
-            <h3>POST A RIDE</h3>
-        </div>
-        
-      </div>
     </div>
 
     
